force-app/main/default/objects/Forrester_TLO_Officer__x/Forrester_TLO_Officer__x.object-meta.xml
<CustomObject>
    <description>Forrester_TLO_Officer</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_CASE_TLO</externalName>
    <label>Forrester TLO Officer</label>
    <pluralLabel>Forrester TLO Officers</pluralLabel>
</CustomObject>