force-app/main/default/objects/Forrester_TLO_Officer__x/fields/ADD_USER__c.field-meta.xml
<CustomField>
    <fullName>ADD_USER__c</fullName>
    <description>ADD_USER</description>
    <externalDeveloperName>ADD_USER</externalDeveloperName>
    <label>Add User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>