force-app/main/default/objects/Forrester_TLO_Officer__x/fields/CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_RECID__c</fullName>
    <description>CASE_RECID</description>
    <externalDeveloperName>CASE_RECID</externalDeveloperName>
    <label>Case RecId</label>
    <length>80</length>
    <referenceTo>Forrester_Case__x</referenceTo>
    <relationshipLabel>TLO Officers</relationshipLabel>
    <relationshipName>TLO_Officers</relationshipName>
    <type>ExternalLookup</type>
</CustomField>