force-app/main/default/objects/Forrester_TLO_Officer__x/fields/CASE_TLO_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_TLO_RECID__c</fullName>
    <description>CASE_TLO_RECID</description>
    <externalDeveloperName>CASE_TLO_RECID</externalDeveloperName>
    <label>Case TLO RecId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>