force-app/main/default/objects/Forrester_TLO_Officer__x/fields/PRIMARY_TLO_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PRIMARY_TLO_FLAG__c</fullName>
    <description>PRIMARY_TLO_FLAG</description>
    <externalDeveloperName>PRIMARY_TLO_FLAG</externalDeveloperName>
    <label>Primary TLO Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>