force-app/main/default/objects/Forrester_TLO_Officer__x/fields/TLO_RECID__c.field-meta.xml
<CustomField>
    <fullName>TLO_RECID__c</fullName>
    <description>TLO_RECID</description>
    <externalDeveloperName>TLO_RECID</externalDeveloperName>
    <label>TLO Officer</label>
    <length>80</length>
    <referenceTo>Forrester_TLO_Officer__x</referenceTo>
    <relationshipLabel>Forrester TLO Officers</relationshipLabel>
    <relationshipName>Forrester_Case_TLO</relationshipName>
    <type>ExternalLookup</type>
</CustomField>