force-app/main/default/objects/Forrester_TLO_Officer__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>PRIMARY_TLO_FLAG__c</columns>
    <columns>CASE_RECID__c</columns>
    <columns>CASE_TLO_RECID__c</columns>
    <columns>TLO_RECID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>